# cmake-swig-java

./: CMakeLists.txt  example.c  example.i  main.java  readme.md
